--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ rocket_codegen = "0.4.4"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+diesel = {version="1.0.0", features=["postgres", "r2d2"]}
+dotenv = "0.15.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.4"
